added lamudi using inheritance

--- a/AuthModule/Info.plist
+++ b/AuthModule/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Signup</string>
+					<string>LamudiSignup</string>
 				</dict>
 			</array>
 		</dict>
